[project]
name = "openai-agent-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.5.5",
    "dotenv>=0.9.9",
    "nest-asyncio>=1.6.0",
    "openai>=1.99.7",
    "openai-agents>=0.2.5",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
